--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   {%- seo -%} <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url
-  }}"> {%- feed_meta -%} {%- if jekyll.environment == 'production' and
+  }}">
+  <link rel="icon" type="image/png" href="/assets/images/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" />
+  <link rel="shortcut icon" href="/assets/images/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="blog.sagyzdop" />  
+  <link rel="manifest" href="/site.webmanifest" />
+  {%- feed_meta -%} {%- if jekyll.environment == 'production' and
   site.google_analytics -%} {%- include google-analytics.html -%} {%- endif -%}
   <!-- for mathjax support -->
   {% if page.usemathjax %}
