--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,7 +5,7 @@
 @import "minima";
 
 .site-title::before {
-    content: url("/assets/images/logo.png");
+    content: url("/assets/images/logo.svg");
     display: inline-block;
     position: relative;
     width: 35px;
